# pinvi

./: .dockerignore  .editorconfig  .env.example  .env.mcp-telegram.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  SKILL.md  _verify.js  airbnb-marker-palette.html  claude.json  codex.json  package-lock.json  package.json  tsconfig.base.json
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260418_0001_initial_core.py  20260424_0002_juso_legal_dong_tables.py  20260425_0003_juso_address_serving_and_related_jibun.py  20260425_0004_vworld_region_boundaries.py  20260425_0005_legal_dong_code_csv_standard.py  20260425_0006_data_go_legal_dong_fields.py  20260426_0007_etl_runtime_logs_and_user_flags.py  20260426_0008_opinet_fuel_tables.py  20260426_0009_rest_area_tables.py  20260426_0010_weather_air_quality_tour_tables.py  20260426_0011_weather_mid_term_and_tour_weather.py  20260427_0012_database_architecture_indexes.py  20260427_0013_seed_default_admin.py  20260427_0015_place_canonical_tables.py  20260427_0016_user_registration_profile.py  20260428_0017_public_cultural_festival.py  20260428_0018_trip_plan_items.py  20260428_0019_kma_beach_weather_tables.py  20260428_0020_beach_domain_tables.py  20260429_0021_map_feature_schema.py  20260429_0022_ocean_activity_index_tables.py  20260509_0023_widen_mid_term_weather_summary.py  20260513_0024_library_spec_v3_schema.py  20260516_0025_provider_source_weather_state.py  20260518_0026_outdoor_feature_profiles.py  20260521_0027_notice_plans.py  20260522_0028_plan_poi_attachments.py  20260601_0001_initial_app_schema.py  20260602_0001_trips_and_share.py  20260602_0002_pois_collate_c.py  20260602_0003_audit_chain.py  20260602_0004_email_queue_and_api_log.py  20260602_0005_notice_plans_and_attachments.py  20260605_0006_kasi_tables.py  20260606_0007_security_incidents.py  20260606_0008_trip_comments.py  20260606_0009_budget_constraints.py  20260606_0010_trip_primary_region.py  20260607_0011_curated_trip_plans.py  20260608_0012_user_access_token_version.py  (+29 more)
apps/api/app/: __init__.py  main.py
apps/api/app/api/: request_url.py
apps/api/app/cli/: __init__.py  legal_dong_code.py  opinet_fuel.py  vworld_boundary.py
apps/api/app/clients/: __init__.py  kakao_local.py  kor_travel_geo.py  kor_travel_map.py  kor_travel_map_admin.py  kraddr_geo.py  krtour_map.py  krtour_map_admin.py  naver_local.py  resend.py  telegram.py
apps/api/app/core/: config.py  deps.py  errors.py  etl_config.py  json_types.py  kex.py  krtour_map_contract.py  kto.py  logging.py  markers.py  rbac.py  redaction.py  security.py  session_cookies.py  time.py
apps/api/app/dagster_etl/: __init__.py  definitions.py  loaders.py  registry.py  runtime.py
apps/api/app/db/: base.py  session.py
apps/api/app/etl/: __init__.py  archive.py
apps/api/app/etl_bridge/: __init__.py  krtour_map.py
apps/api/app/geospatial/: __init__.py  kma_grid.py
apps/api/app/mcp/: __init__.py  auth.py  server.py
apps/api/app/middleware/: api_call_logging.py  geofence.py  location_audit.py  prometheus.py  rate_limit.py  request_id.py  security_headers.py
apps/api/app/models/: __init__.py  address.py  api_call_log.py  attachment.py  audit.py  beach.py  category_mapping.py  comment.py  companion.py  curated_plan.py  data_integrity.py  dsr.py  email_deliverability.py  email_queue.py  etl.py  feature_suggestion.py  fuel.py  kasi.py  mcp_token.py  mixins.py  moderation.py  notice_plan.py  oauth_identity.py  ocean.py  place.py  poi.py  rate_limit.py  rest_area.py  security.py  session.py  share_link.py  storage_settings.py  telegram_outbox.py  telegram_target.py  tour.py  trip.py  trip_day.py  trip_telegram_target.py  user.py  user_consent.py  (+2 more)
apps/api/app/schemas/: admin.py  admin_feature_request.py  attachment.py  auth.py  consent.py  dsr.py  envelope.py  feature.py  geo.py  health.py  mcp.py  mobile.py  moderation.py  notice.py  oauth.py  poi.py  public.py  region.py  search.py  share_link.py  storage.py  telegram.py  trip.py
apps/api/app/services/: admin_app_integrity.py  admin_audit.py  admin_auth.py  admin_curated_attachment.py  admin_data_browser.py  admin_entity_crud.py  admin_etl.py  admin_pois.py  admin_rate_limit_abuse.py  admin_rbac.py  admin_request_timeline.py  admin_retention.py  admin_security_incidents.py  admin_trip_operations.py  admin_trips.py  admin_user_lifecycle.py  admin_users.py  auth_session.py  avatar_storage.py  backup_service.py  bootstrap_admin.py  cluster_query.py  consent.py  dsr_requests.py  email_deliverability.py  email_delivery.py  email_service.py  etl_runtime.py  feature_cache.py  kasi.py  (+34 more)
apps/api/tests/: conftest.py  test_admin_api.py  test_admin_entities_api.py  test_airflow_dags.py  test_airflow_legal_dong_dag.py  test_auth_api.py  test_beach_source_loader.py  test_dagster_etl.py  test_etl_config.py  test_etl_runtime.py  test_etl_soak_config.py  test_file_storage.py  test_health.py  test_juso_address_dataset_loader.py  test_juso_download.py  test_juso_legal_dong_loader.py  test_juso_parser.py  test_juso_pipeline.py  test_kex_krex.py  test_kex_pykex.py  test_khoa_ocean_index_loader.py  test_kma_beach_weather_loader.py  test_kma_grid.py  test_kma_tour_course_loader.py  test_krtour_map_contract.py  test_kto_pykrtourapi.py  test_kto_visitkorea.py  test_legal_dong_code_cli.py  test_legal_dong_code_loader.py  test_migration_contract.py  test_model_metadata.py  test_notice_plans_api.py  test_oauth_email_policy.py  test_opinet_adapter.py  test_opinet_fuel_loader.py  test_opinet_source.py  test_outdoor_feature_loader.py  test_plan_poi_attachments_api.py  test_public_cultural_festival_loader.py  test_public_data_place_loader.py  (+8 more)
apps/etl/: Dockerfile  pyproject.toml
apps/etl/tests/: test_definitions.py  test_email_outbox.py  test_kasi_special_days.py  test_location_log_archive.py  test_pii_retention.py  test_run_failure_sensor.py  test_sql_statements.py  test_telegram_system_outbox.py  test_trip_day_rise_sets.py
(+852 files in other folders)
