[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tripmate-api"
version = "0.1.0"
description = "FastAPI backend for TripMate"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17.0",
  "dagster>=1.13.0,<2",
  "dagster-webserver>=1.13.0,<2",
  "fastapi>=0.124.0",
  "geoalchemy2>=0.18.0",
  "httpx>=0.28.0",
  "python-krtour-map @ git+https://github.com/digitie/python-krtour-map.git@2c6837e0a4defa2fa52bb7b50dc08f6575f9ed09",
  "python-krex-api @ git+https://github.com/digitie/python-krex-api.git@0829503f0db6939fcf77b5efd2962e8c8a96807f",
  "python-opinet-api @ git+https://github.com/digitie/python-opinet-api.git@16c41d6b8bbb709badd22cfbfa873445c27717a5",
  "python-kma-api @ git+https://github.com/digitie/python-kma-api.git@9300e37ea4369539f68959c4f87486943bd9df7e",
  "python-khoa-api @ git+https://github.com/digitie/python-khoa-api.git@8bca42a1a68b61673a789128fd21e084d3f7bb12",
  "python-krforest-api @ git+https://github.com/digitie/python-krforest-api.git@672de8b24ee07f377f3d090204d3267b3e9ab544",
  "python-mois-api @ git+https://github.com/digitie/python-mois-api.git@13c1607902fc4a9432159f754cb457499639f942",
  "python-kraddr-base @ git+https://github.com/digitie/python-kraddr-base.git@cfcaf5ca1ba9a0060af18de9a377dea4f9cbb8ef",
  "python-visitkorea-api @ git+https://github.com/digitie/python-visitkorea-api.git@bf90de9292efe2eb7da9ee4f9f43c0a3f9238bc9",
  "pyproj>=3.7.0",
  "pyshp>=2.3.1",
  "psycopg[binary]>=3.3.0",
  "pydantic-settings>=2.12.0",
  "shapely>=2.1.0",
  "sqlalchemy>=2.0.45",
  "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
  "mypy>=1.19.0",
  "pytest>=9.0.0",
  "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "live: tests that call real external data providers and require explicit opt-in",
]

[tool.mypy]
python_version = "3.12"
plugins = ["sqlalchemy.ext.mypy.plugin"]
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = false
exclude = "^\\.venv(-wsl)?/"

[[tool.mypy.overrides]]
module = ["shapefile", "shapely.*"]
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["app*"]
