[project]
name = "tripmate-api"
version = "0.1.0"
description = "TripMate FastAPI backend"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "argon2-cffi>=23.1",
  "passlib[argon2]>=1.7",
  "python-jose[cryptography]>=3.3",
  "httpx>=0.27",
  "tenacity>=9.0",
  "structlog>=24.4",
  "python-multipart>=0.0.12",
  "email-validator>=2.2",
  "slowapi>=0.1.9",
  "resend>=2.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.7",
  "mypy>=1.13",
  "types-passlib",
  "testcontainers[postgres]>=4.8",
  "freezegun>=1.5",
  "vcrpy>=6.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", "F", "W",
  "I",     # isort
  "UP",    # pyupgrade
  "B",     # bugbear
  "RUF",   # ruff-specific
  "S",     # bandit (보안)
  "ASYNC", # async pitfalls
]
ignore = [
  "E501",  # line-length은 formatter가 처리
  "S101",  # assert는 pytest에서 허용
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106", "S107"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/.*"]

[[tool.mypy.overrides]]
module = "resend.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
