[project]
name = "tripmate-etl"
version = "0.1.0"
description = "TripMate Dagster code location — Sprint 5에서 본격 활성화 (ADR-006)."
requires-python = ">=3.12"

dependencies = [
  "dagster>=1.9",
  "dagster-webserver>=1.9",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "httpx>=0.27",
  "python-kasi-api @ git+https://github.com/digitie/python-kasi-api.git@main",
  "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.13",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["tripmate"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.dagster]
module_name = "tripmate.etl.definitions"
